--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
+
+
 <!DOCTYPE html>
-<html lang="no">
+<html lang="en">
 <head>
 <script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "chimuelo", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>D1skréte Møter</title>
-<meta content='https://i.postimg.cc/SQVxd77J/Vista-Uno-Sepia.png' property='og:image'/>
+<title>Servizi privati</title>
+<meta content='https://i.ibb.co/80zgRhJ/Screenshot-2.jpg' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/backoffer.js"></script>
 <link rel="stylesheet" href="https://cdn.smrt-content.com/assets/1004/css/index.css">
 <link rel="shortcut icon" href="https://cdn.jmpcdn.com/assets/3420/images/2.ico" type="image/x-icon">
-<title>BILDEGALLERI</title>
+<title>Photo Gallery</title>
 <div class="layer">
 </div>
 <div class="wrap">
@@ -24,38 +26,35 @@
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-Vi kommer til deg om natten, tjenester tilgjengelig over hele byen. Vil du se katalogen min?
-</div>
+Verremo a casa tua di notte, servizio in tutta la città. Vuoi vedere il mio catalogo?.</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
-Nei
+No
 </div>
 <div class="step-btn yes-btn tr-next-button tr-b-option">
-Ja
+SÌ
 </div>
 </div>
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-ADVARSEL! Godtar du å respektere kvinnene du vil se senere? Hvis du kjenner noen, ikke fortell dem om dette og ikke spre rykter...
-</div>
+Per registrarti gratuitamente e SCOPARE qualsiasi ragazza, fai clic sul pulsante INVIO in basso per registrarti gratuitamente sul nostro sito di incontri privato. Siamo vivi, desideriamo deliziosi rapporti anali, vaginali, sesso a tre e molto altro ancora...</div>
 <p>
 <b style="color: red;">
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://go-2-date.us/tds/ae?tdsId=s3419pos_r&tds_campaign=s3419pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d1e5281c&subid={Chimueloo}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">JEG GODTAR
+<a href="https://aoarlv.satlsfyingdates.net/?utm_source=da57dc555e50572d&ban=fb&j1=1&s1=234303&s2=2120443&s3=TheTakis" class="step-btn submit-btn tr-submit-button showmail">ENTER
 </a>
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://cdn77-vid-mp4.xvideos-cdn.com/NrI-9u_A9xGDFVqrq1cCLw==,1737966589/videos/mp4/7/2/5/xvideos.com_725b860aa69386510f8343555c9a0e59.mp4?ui=MTg2Ljg5LjI1MC40Ny05MjkzNTc0MTktL3ZpZGVvLm90aXZmaW05MmRlL2xhX3ZhcXVlcmFf" type="video/mp4">
+<source src="https://cdn-dimi.akamaized.net/landings/275415/1665133459/images/4.mp4" type="video/mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
         w.backOfferUrl = ''    }
                         (window));
       /*]]>*/ 
-</script>
 </body>
 </html>
