--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
+
+
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 <head>
 <script id="_wauu9y">var _wau = _wau || []; _wau.push(["dynamic", "chimu", "u9y", "c4302bffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Servizi Privati</title>
+<title>servizi privati</title>
 <meta content='https://i.postimg.cc/9Q8T6rYt/488447245-122193397652250968-4181822810180506855-n.jpg' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
@@ -14,7 +16,7 @@
 <script src="https://cdn.smrt-content.com/assets/1004/js/backoffer.js"></script>
 <link rel="stylesheet" href="https://cdn.smrt-content.com/assets/1004/css/index.css">
 <link rel="shortcut icon" href="https://cdn.jmpcdn.com/assets/3420/images/2.ico" type="image/x-icon">
-<title>Galleria Foto</title>
+<title>Photo Gallery</title>
 <div class="layer">
 </div>
 <div class="wrap">
@@ -30,7 +32,7 @@ Offro i miei servizi sessuali, balli e massaggi erotici a domicilio. Vuoi vedere
 Sì
 </div>
 <div class="step-btn yes-btn tr-next-button tr-b-option">
-No
+NO
 </div>
 </div>
 </div>
@@ -50,9 +52,9 @@ AVVERTIMENTO! Accetti di rispettare le donne che vedrai prossimamente?</div>
 <source src="https://cdn-dimi.akamaized.net/landings/288193/1714145726/images/video-4.mp4" type="video/mp4" type="video/mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
-      /*<![CDATA[*/   (function(w){
-        w.backOfferUrl = ''   }
-                          (window));
+      /*<![CDATA[*/    (function(w){
+        w.backOfferUrl = ''    }
+                        (window));
       /*]]>*/ 
 </body>
 </html>
